¡Nuevo algoritmo agregado! Un gestor básico de usuarios en consola, incompleto pero con varias funcionalidades. Y pequeños añadidos a la prueba de bienvenida.

--- a/AlgoritmosPruebasYMore/AlgoritmosPruebasYMore.csproj
+++ b/AlgoritmosPruebasYMore/AlgoritmosPruebasYMore.csproj
@@ -44,6 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CorreoElectronico.cs" />
+    <Compile Include="GestorDeUsuario.cs" />
     <Compile Include="LychrelNumber.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
